2002-11-10  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Commented out AM_PROG_AS, as there is not such macro
	in my installation

	* src/libnrtype/nr-typeface.h: Signature change for outline unref

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_glyph_outline_get): Implemented
	vertical metrics outline
	(nr_typeface_gnome_glyph_advance_get): Ditto for advance

	* src/libnrtype/nr-type-directory.c: Cleaned up a lot, now we can hopefully
	work with multiple font sources

	* src/libnrtype/nr-type-directory.h: Moved namelist to nr-type-primitives

	* src/libnrtype/nr-type-primitives.c: New file

	* src/libnrtype/nr-type-primitives.h: New file

	* src/libnrtype/nr-type-ft2.c: New file

	* src/libnrtype/nr-type-ft2.h: New file

2002-11-09  Masatake YAMATO  <jet@gyve.org>

	* configure.in (AM_CONDITIONAL(USING_OAF)): moved to toplevel.
	(AM_PROG_AS): used to check gas/as.

	* src/toolbox.c (sp_update_draw_toolbox): tooltips
	are added to the buttons.
	(gtk_event_box_new_with_image_file_and_tooltips) 
	(gtk_event_box_force_draw_parent): New functions.

	* src/widgets/sp-menu-button.c 	(sp_menu_button_draw_arrow): New function.
	(sp_menu_button_draw): used sp_menu_button_draw_arrow.
	(sp_menu_button_expose): ditto.

2002-11-06  Masatake YAMATO  <jet@gyve.org>

	* src/helper/curve.c (sp_curve_new_from_bpath): Initialize substart
	field.
	(sp_curve_reverse): assert if bs->code is ART_MOVETO_OPEN 
	or ART_MOVETO.

	Added functions that converts multiple items to curves.
	* src/path-chemistry.c (sp_selected_item_to_curved_repr): 
	Use sp_selected_item_to_curved_repr0.
	(sp_selected_path_to_curves0): New function.
	(sp_selected_path_to_curves): New function.
	(SP_TOCURVE_*): Placeholders.

2002-11-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c: Made glade-free dialog

	* src/file.c (sp_export_png_file): Make filename const

	* configure.in (CFLAGS): Added GCC warnings

2002-11-03  Lauris Kaplinski  <lauris@kaplinski.com>
